<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">gyicPlat</string>
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text">你可以创建一个解锁图案，这样他人在借用你的手机时，将无法打开应用。</string>
    <string name="gesture_password_reset_text">忘记密码，输入员工号重新设置密码</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    <string name="gesture_password_guide_reset_btn">重新设置手势密码</string>
    <string name="action_settings">Settings</string>
    <string name="success">成功</string>
    <string name="error">失败</string>
    <string name="sdcarderror">sdcard 错误</string>
    <string name="lib_name">filedownloader</string>
    <string name="lib_version">0.1</string>
    <string name="foreground_service_started" />
    <string name="vpn_error_40000">连接VPN网关失败</string>
    <string name="vpn_error_40001">从配置中获取认证参数出错</string>
    <string name="vpn_error_40002">从配置中获取mlink开关状态参数出错</string>
    <string name="vpn_error_40003">从配置中获取控件安装模式参数出错</string>
    <string name="vpn_error_40004">从配置中获取mlink列表出错</string>
    <string name="vpn_error_40005">生成图形识别码出错</string>
    <string name="vpn_error_40006">发送图形识别码出错</string>
    <string name="vpn_error_40007">从配置中获取控件安装参数出错</string>
    <string name="vpn_error_40008">获取session id cookie出错</string>
    <string name="vpn_error_40009">由session id获取session出错</string>
    <string name="vpn_error_40010">获取用户操作参数出错</string>
    <string name="vpn_error_40011">获取端点安全参数出错</string>
    <string name="vpn_error_40012">获取不到用户端发送过来的语言类型</string>
    <string name="vpn_error_40013">由session id删除session出错</string>
    <string name="vpn_error_40014">用户名或口令为空</string>
    <string name="vpn_error_40015">获取不到登录错误次数cookie</string>
    <string name="vpn_error_40016">口令输入错误次数大于3次</string>
    <string name="vpn_error_40018">验证码输入错误</string>
    <string name="vpn_error_40019">登录用户被锁定</string>
    <string name="vpn_error_40020">登录用户被临时锁定</string>
    <string name="vpn_error_40021">登录用户IP地址非法</string>
    <string name="vpn_error_40022">登录用户密码有效期已到</string>
    <string name="vpn_error_40023">此登录用户密码太简单,要求修改密码</string>
    <string name="vpn_error_40024">第一次登录，请修改初始密码</string>
    <string name="vpn_error_40025">用户名或口令认证不通过</string>
    <string name="vpn_error_40026">密码错误</string>
    <string name="vpn_error_40027">用户需要证书认证</string>
    <string name="vpn_error_40028">用户已存在</string>
    <string name="vpn_error_40029">无法创建新SESSION</string>
    <string name="vpn_error_40030">外部硬件特征码长度错误</string>
    <string name="vpn_error_40031">未提交用户证书</string>
    <string name="vpn_error_40032">转换证书格式出错</string>
    <string name="vpn_error_40033">获取证书中用户信息时出错</string>
    <string name="vpn_error_40034">双因子认证，需要密码</string>
    <string name="vpn_error_40035">无法获取证书指纹</string>
    <string name="vpn_error_40036">发送JSON语法时出错</string>
    <string name="vpn_error_40037">修改密码出错</string>
    <string name="vpn_error_40038">用户已满</string>
    <string name="vpn_error_40039">短信认证码错误</string>
    <string name="vpn_error_40040">获取缺省门户信息出错</string>
    <string name="vpn_error_40041">获取门户名cookie出错</string>
    <string name="vpn_error_40042">短信密码发送失败</string>
    <string name="vpn_error_40043">验证码只能使用英文或数字</string>
    <string name="vpn_error_40044">短信认证码已超时无效</string>
    <string name="vpn_error_40045">短信认证码检查失败</string>
    <string name="vpn_error_40046">获取认证服务器失败</string>
    <string name="vpn_error_40047">短信认证码检查失败</string>
    <string name="vpn_error_40048">获取控件开关状态失败</string>
    <string name="vpn_error_40049">获取公告信息失败</string>
    <string name="vpn_error_40050">获取最小IE开关状态失败</string>
    <string name="vpn_error_40051">获取资源列表失败</string>
    <string name="vpn_error_40052">找回密码失败</string>
    <string name="vpn_error_40053">可信认证失败</string>
    <string name="vpn_error_40054">可信认证和唯一识别码失败</string>
    <string name="vpn_error_40055">硬件特征码错误</string>
    <string name="vpn_error_40056">网关未启用密码卡，请与管理员联系</string>
    <string name="vpn_error_40057">获取不到客户端POST上的数据</string>
    <string name="vpn_error_40058">修改的密码太短</string>
    <string name="vpn_error_40059">修改的密码至少包含一个大写字母</string>
    <string name="vpn_error_40060">修改的密码至少包含一个小写字母</string>
    <string name="vpn_error_40061">修改的密码至少包含一个数字</string>
    <string name="vpn_error_40062">修改的密码至少包含一个符号</string>
    <string name="vpn_error_40063">修改的密码不能包含用户名</string>
    <string name="vpn_error_40064">用户禁止修改密码</string>
    <string name="vpn_error_40065">获取门户信息失败</string>
    <string name="vpn_error_40066">打开ldap服务器失败</string>
    <string name="vpn_error_40067">绑定服务器失败</string>
    <string name="vpn_error_40068">查询服务器失败</string>
    <string name="vpn_error_40069">更改口令失败</string>
    <string name="vpn_error_40070">不支持的服务器</string>
    <string name="vpn_error_40071">找回密码失败</string>
    <string name="vpn_error_40072">找回密码超过次数限制，请与管理员联系</string>
    <string name="vpn_error_40073">使用邮件获取用户信息，用户没有对应邮箱地址</string>
    <string name="vpn_error_40074">使用短信获取用户信息，用户没有对应手机信息</string>
    <string name="vpn_error_40075">当前系统不支持这种方式获取用户信息</string>
    <string name="vpn_error_40076">取不到hostname</string>
    <string name="vpn_error_40077">不允许多点登录</string>
    <string name="vpn_error_40078">修改密码时，原密码错误</string>
    <string name="vpn_error_40079">网关设置不允许口令认证</string>
    <string name="vpn_error_40080">用户不存在</string>
    <string name="vpn_error_40081">密码错误</string>
    <string name="vpn_error_40082">用户证书认证失败</string>
    <string name="vpn_error_40083">可信认证警告 唯一识别码正确</string>
    <string name="vpn_error_40084">可信认证警告 唯一识别码失败</string>
    <string name="vpn_error_40085">打开LDAP服务器失败</string>
    <string name="vpn_error_40086">绑定LDAP服务器失败</string>
    <string name="vpn_error_40087">查询LDAP服务器失败</string>
    <string name="vpn_error_40090">向核心注册失败</string>
    <string name="vpn_error_40091">用户已过期</string>
    <string name="vpn_error_40092">该用户手机号不存在</string>
    <string name="vpn_error_40093">短信认证用户不存在</string>
    <string name="vpn_error_40094">无法连接认证服务器</string>
    <string name="vpn_error_40095">与认证服务器通信失败</string>
    <string name="vpn_error_40106">获取用户短信认证信息失败</string>
    <string name="vpn_error_40107">用户不支持口令认证</string>
    <string name="vpn_error_40108">用户不支持证书认证</string>
    <string name="vpn_error_40109">用户不支持双因子认证</string>
    <string name="vpn_error_40110">获取用户认证信息失败</string>
    <string name="vpn_error_40111">获取认证模块全局配置失败</string>
    <string name="vpn_error_40112">登录时间错误</string>
    <string name="vpn_error_40113">超过最大允许登陆地点</string>
    <string name="vpn_error_40114">获取密码时间间隔太小</string>
    <string name="vpn_error_40115">获取门户所属组失败</string>
    <string name="vpn_error_40116">门户不允许该组用户访问</string>
    <string name="vpn_error_40117">获取用户所属组失败</string>
    <string name="vpn_error_40119">获取贵宾用户标志错误</string>
    <string name="vpn_error_40120">获取用户登陆策略错误</string>
    <string name="vpn_error_40121">外部用户不支持修改该属性</string>
    <string name="vpn_error_40122">获取用户历史信息失败</string>
    <string name="vpn_error_40123">不能获得用户权限</string>
    <string name="vpn_error_40125">用户被禁用</string>
    <string name="vpn_error_40130">外部硬件特征码长度错误</string>
    <string name="vpn_error_40133">证书校验失败</string>
    <string name="vpn_error_40135">认证因子错误</string>
    <string name="vpn_error_40136">radius服务器认证失败</string>
    <string name="vpn_error_40137">用户名与证书属性不同</string>
    <string name="vpn_error_40255">VPN 连接网关失败</string>
    
    <string name="main_tab_name_index">主页</string>
    <string name="main_tab_name_manager">管理</string>
    <string name="main_tab_name_news">消息中心</string>
    <string name="main_tab_name_more">更多</string>
    
    <string name="index_title">平台主页</string>
    <string name="manager_title">应用管理</string>
    <string name="news_title">消息中心</string>
    <string name="more_title">更多</string>
    
    <string name="submit_adv">提交反馈</string>
    <string name="hint_adv">请在这里输入您的意见(200字以内)</string>
    <string name="qrcode_content">扫描下面的二维码图案，下载移动应用平台APP</string>
    
    <string name="download_set">下载设置</string>
    <string name="download_tip">移动网络下载时网络提示</string>
    <string name="check_new_version">检查新版本</string>
    <string name="modify_password">修改密码</string>
    <string name="setting_gesture_password">设置手势密码</string>
    <string name="gesture_password_lock">手势密码锁定</string>
    <string name="is_open_float">是否打开悬浮窗</string>
    <string name="linker_backup">联系人和短信备份</string>
    <string name="linker_recover">联系人和短信恢复</string>
    <string name="help">帮助</string>
    <string name="quit">退出</string>
    
    <string name="tip_double_click_exit">再次点击退出移动应用平台</string>
    
</resources>
